# crucible

./: .dockerignore  .gitignore  .gitmodules  .hlint.yaml  .travis.yml  CHANGES.md  LICENSE  README.md  build-sandbox-version-pins.txt  build-sandbox.sh  cabal.GHC-8.10.2.config  cabal.GHC-8.10.4.config  cabal.GHC-8.10.7.config  cabal.GHC-8.6.5.config  cabal.GHC-8.8.4.config  cabal.GHC-9.0.2.config  cabal.GHC-9.10.1.config  cabal.GHC-9.12.2.config  cabal.GHC-9.2.2.config  cabal.GHC-9.2.3.config  cabal.GHC-9.2.4.config  cabal.GHC-9.2.7.config  cabal.GHC-9.2.8.config  cabal.GHC-9.4.4.config  cabal.GHC-9.4.5.config  cabal.GHC-9.4.8.config  cabal.GHC-9.6.2.config  cabal.GHC-9.6.5.config  cabal.GHC-9.6.7.config  cabal.GHC-9.8.2.config  cabal.GHC-9.8.4.config  cabal.config  cabal.project  cabal.project.ci  cleanup.sh  get-dependencies.sh  jenkins-junit-munge.xsl  mk-gitrev.sh  mk-svcomp-tarball.sh  refactor.sh  (+16 more)
crucible/: CHANGELOG.md  LICENSE  crucible.cabal
crucible-abc/: crucible-abc.cabal
crucible-api-checker/: CHANGELOG.md  README.md  crucible-api-checker.cabal
crucible-api-checker/test/: Test.hs
crucible-blt/: crucible-blt.cabal
crucible-blt/test/: Test.hs
crucible-bsv/: AES_Defs.ast  AES_Defs.hs  LICENSE  TestBSV.hs  crucible-bsv.cabal
crucible-c/: README.md  build-stack.sh  crucible-c.cabal  stack-ghc-8.2.yaml  stack-ghc-8.4.yaml
crucible-c/c-src/: concrete-backend.c  crucible.c  print-model.c  sv-comp.c
crucible-c/includes/: crucible.h  sv-comp.h
crucible-c/src/: CLibSrc.hs  ChattySolver.hs  Clang.hs  CrucibleCMain.hs  Error.hs  Goal.hs  Log.hs  Loops.hs  Main.hs  Model.hs  Options.hs  Overrides.hs  ProgressBar.hs  Report.hs  Types.hs
crucible-c/test/: Test.hs
crucible-c/tests/: Makefile  example1.c
crucible-c/ui/: index.html  jquery.min.js  ui.html
crucible-cli/: CHANGELOG.md  LICENSE  crucible-cli.cabal
crucible-cli/app/: Main.hs
crucible-cli/test/: Overrides.hs  Test.hs
crucible-cli/test-data/: .gitignore
crucible-combo/: crucible-combo.cabal
crucible-combo/test/: Test.hs
crucible-combo/tool/: Main.hs
crucible-debug/: CHANGELOG.md  README.md  crucible-debug.cabal
crucible-debug/app/: Main.hs
crucible-debug/test/: Test.hs
crucible-debug/test-data/: add.cbl  args.cbl  assert-false.cbl  assert-true.cbl  backend.cbl  backend.txt  backtrace.txt  basic.cbl  block.txt  break.txt  call-basic.txt  clear.txt  comment.txt  delete.txt  finish.txt  frame.txt  help.txt  load-empty.txt  location.txt  obligation-false.txt  obligation.txt  path-condition.txt  prove-false.txt  prove-true.txt  prove.txt  quit.txt  r.txt  reg.txt  run.txt  step.txt  three-calls.cbl  trace.txt  usage.txt
crucible-go/: CHANGELOG.md  ChangeLog.md  LICENSE  crucible-go.cabal
crucible-go/tool/: Main.hs
crucible-jvm/: CHANGELOG.md  LICENSE  cabal.project  crucible-jvm.cabal
crucible-jvm/src/: Error.hs  Goal.hs  Log.hs  Main.hs  Model.hs  Options.hs  Report.hs  Types.hs
crucible-jvm/tests/: DoubleSum.java  Frem.java  Main.java  Makefile  Str.java  StringConstants.java  test.sh
crucible-jvm/tool/: Main.hs
crucible-llvm/: CHANGELOG.md  README.md  crucible-llvm.cabal
crucible-llvm-cli/: .hlint.yaml  CHANGELOG.md  crucible-llvm-cli.cabal
crucible-llvm-cli/app/: Main.hs
crucible-llvm-cli/test/: Test.hs
crucible-llvm-cli/test-data/: T1463-read-bytes.cbl  T1463-read-bytes.out.good  T1463-strlen.cbl  T1463-strlen.out.good  intrinsic-types.cbl  isnan.cbl  llvm.expect.i1.cbl  llvm.scmp.i2.i32.cbl  llvm.stacksave-stackrestore.cbl  llvm.ucmp.i2.i32.cbl  llvm.umin.v4i32.cbl  llvm.vector.reduce.add.v4i32.cbl  llvm.vector.reduce.and.v4i32.cbl  llvm.vector.reduce.and.v4i32.out.good  llvm.vector.reduce.mul.v4i32.cbl  llvm.vector.reduce.or.v4i32.cbl  llvm.vector.reduce.smax.v4i32.cbl  llvm.vector.reduce.smin.v4i32.cbl  llvm.vector.reduce.umax.v4i32.cbl  llvm.vector.reduce.umin.v4i32.cbl  llvm.vector.reduce.xor.v4i32.cbl  memcmp.cbl  memset.cbl  ptr.cbl  strcmp.cbl  strcpy.cbl  strcpy.out.good  strdup.cbl  string.cbl  strlen.cbl  strncmp.cbl  strndup.cbl  strnlen.cbl  strnlen.out.good
crucible-llvm-debug/: CHANGELOG.md  README.md  crucible-llvm-debug.cabal
crucible-llvm-debug/app/: Main.hs
crucible-llvm-syntax/: .hlint.yaml  CHANGELOG.md  README.md  crucible-llvm-syntax.cabal
crucible-llvm-syntax/app/: Main.hs
crucible-llvm-syntax/test/: Test.hs
crucible-llvm-syntax/test-data/: frame.cbl  frame.out.good  ptr.cbl  ptr.out.good  type.cbl  type.out.good
crucible-llvm/doc/: dev.md  limitations.md  memory-model.md  undefined-behavior.md
crucible-llvm/test/: MemSetup.hs  TestBehavior.hs  TestFunctions.hs  TestGlobals.hs  TestMemory.hs  TestTranslation.hs  Tests.hs
crucible-mc/: CHANGELOG.md  LICENSE  README  README.md  crucible-mc.cabal  package.yaml
crucible-mc/exe/: Main.hs  Print.hs
crucible-mc/test/: .gitignore  Makefile  example.c  loop-simple-deep-nested.c
crucible-mir/: CHANGELOG.md  LICENSE  README.md  crucible-mir.cabal
crucible-protobuf-trace/: README.md  crucible-protobuf-trace.cabal
crucible-saw/: crucible-saw.cabal
crucible-server/: README  Setup.hs  crucible-server.cabal
crucible-symio/: CHANGELOG.md  LICENSE  README.md  crucible-symio.cabal
crucible-syntax/: CHANGELOG.md  README.txt  cabal.project  crucible-syntax.cabal  test.cbl  test2.cbl  test3.cbl  test4.cbl  test5.cbl
crucible-wasm/: CHANGELOG.md  LICENSE  README.md  crucible-wasm.cabal
crux/: CHANGELOG.md  LICENSE  cabal.project  crux.cabal
crux-llvm/: .crucible-debug  .gitignore  CHANGELOG.md  README.md  build-stack.sh  crux-llvm.cabal  install.project  no-override.c  run.sh  stack-ghc-8.2.yaml  stack-ghc-8.4.yaml  stack-ghc-8.6.yaml  test-creat.c  test-open-flags.c  test.bc
crux-mir/: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Concurrency.md  LICENSE  README.md  build.sh  cabal.project  crux-mir.cabal  install.project  libs  mir-verifier.cabal  overview.md  rust-toolchain.toml  stack-ghc-8.2.yaml  stack-ghc-8.4.yaml  stack.yaml  todo.org  translate_libs.sh
crux-polyglot/: CHANGELOG.md  crux-polyglot.cabal
galois-matlab/: .gitignore  galois-matlab.cabal
(+3378 files in other folders)
