Name:          saw-script
Version:       0.2
Author:        Galois Inc.
Maintainer:    atomb@galois.com
Build-type:    Simple
Cabal-version: >= 1.8.0.2
License:       BSD3
License-file:  LICENSE

extra-source-files:
    src/SAWScript/Parser.y
    src/SAWScript/Lexer.x

library
  build-depends:
      base >= 4
    , abcBridge
    , aig
    , ansi-wl-pprint
    , array
    , binary
    , bytestring
    , containers
    , cryptol
    , cryptol-verifier
    , deepseq
    , either
    , executable-path
    , directory
    , fgl
    , filepath
    , free
    , haskeline
    , IfElse
    , jvm-parser
    , jvm-verifier
    , lens
    , llvm-pretty >= 0.3.0.0
    , llvm-pretty-bc-parser >= 0.1.3.1
    , llvm-verifier >= 0.2.1
    , monad-supply
    , mtl >= 2.1
    , old-locale
    , old-time
    , parsec
    , pretty
    , pretty-show
    , process
    , saw-core
    , saw-core-aig
    , saw-core-sbv
    , sbv >= 4.3
    , smtLib
    , split
    , temporary
    , template-haskell
    , terminal-size
    , text
    , time
    , transformers
    , transformers-compat
    , vector
    , xdg-basedir
    , GraphSCC

  hs-source-dirs: src

  exposed-modules:
    SAWScript.AST
    SAWScript.AutoMatch
    SAWScript.AutoMatch.Interaction
    SAWScript.AutoMatch.ArgMapping
    SAWScript.AutoMatch.Declaration
    SAWScript.AutoMatch.Cryptol
    SAWScript.AutoMatch.LLVM
    SAWScript.AutoMatch.JVM
    SAWScript.AutoMatch.Util
    SAWScript.Builtins
    SAWScript.CongruenceClosure
    SAWScript.Compiler
    SAWScript.CryptolBuiltins
    SAWScript.CryptolEnv
    SAWScript.Import
    SAWScript.ImportAIG
    SAWScript.Interpreter
    SAWScript.JavaBuiltins
    SAWScript.JavaExpr
    SAWScript.JavaMethodSpec
    SAWScript.JavaMethodSpec.Evaluator
    SAWScript.JavaMethodSpecIR
    SAWScript.JavaUtils
    SAWScript.JavaPretty
    SAWScript.Lexer
    SAWScript.LLVMBuiltins
    SAWScript.LLVMExpr
    SAWScript.LLVMMethodSpec
    SAWScript.LLVMMethodSpecIR
    SAWScript.LLVMUtils
    SAWScript.Options
    SAWScript.Parser
    SAWScript.PathVC
    SAWScript.Proof
    SAWScript.SBVParser
    SAWScript.SBVModel
    SAWScript.SAWCorePrimitives
    SAWScript.Token
    SAWScript.TopLevel
    SAWScript.MGU
    SAWScript.TypedTerm
    SAWScript.Utils
    SAWScript.Value
    SAWScript.VerificationCheck

  GHC-options: -O2 -Wall -Werror -fno-ignore-asserts -fno-spec-constr-count

  build-tools:
    alex >= 3.1.3,
    happy >= 1.9.4

executable saw
  hs-source-dirs: saw

  GHC-options: -O2 -Wall -Werror -fno-ignore-asserts -fno-spec-constr-count

  main-is: Main.hs

  other-modules:
    GitRev
    Paths_saw_script
    SAWScript.REPL
    SAWScript.REPL.Command
    SAWScript.REPL.Haskeline
    SAWScript.REPL.Logo
    SAWScript.REPL.Monad
    SAWScript.REPL.Trie
    SAWScript.Version

  build-depends:
      base >= 4
    , ansi-terminal
    , containers
    , cryptol
    , directory
    , either
    , filepath
    , gitrev
    , haskeline
    , QuickCheck
    , transformers
    , saw-script
    , saw-core
