Name:          crucible-abc
Version:       0.1
Author:        Galois Inc.
Maintainer:    jhendrix@galois.com
Copyright:     (c) Galois, Inc 2014-2016
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Cabal-version: >= 1.9.2
Category:      Language
Synopsis:      Crucible bindings to ABC
Description:
  ABC provides datastructures and solver support for working with
  boolean circuits expressed using And-Inverter Graphs (AIGs).  This
  package provides support for lowering Crucible formulae to AIGs
  and binding to ABC solver subroutines.

library
  build-depends:
    base >= 4.7 && < 4.12,
    aig,
    abcBridge >= 0.11,
    ansi-wl-pprint,
    containers,
    crucible >= 0.1,
    directory,
    io-streams,
    lens,
    mtl,
    parameterized-utils,
    process,
    text,
    transformers,
    unordered-containers,
    utf8-string

  hs-source-dirs: src

  exposed-modules:
    Lang.Crucible.Solver.SimpleBackend.ABC

  ghc-options: -Wall
  ghc-prof-options: -O2 -fprof-auto-top
