cabal-version:       >=1.10

name:                crucible-combo
version:             0.1.0.0
synopsis:            Support for translating and executing multiple language code in Crucible
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Galois Inc.
maintainer:          kquick@galois.com
copyright:           (c) Galois, Inc. 2020
category:            Language
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable crucible-combo
  hs-source-dirs:      tool
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4 && <5
                     , crucible-combo
  default-language:    Haskell2010

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:    Lang.Crucible.Combo
  other-modules:
  build-depends:      base >=4 && <5
                    , crucible
                    , crucible-llvm
                    , crux-mir
                    , parameterized-utils
                    , prettyprinter >= 1.7.0 && < 1.8
                    , text

test-suite comboTests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  main-is:            Test.hs
  build-depends:      base
                    , crucible-combo -any
                    , tasty
                    , tasty-hspec