name:                crucible-go
version:             0.1.0.0
synopsis:            A Go frontend for Crucible
license:             BSD3
license-file:        LICENSE
author:              Alex Bagnall
maintainer:          abagnall@galois.com
copyright:           (c) 2020 Galois Inc
category:            Language
build-type:          Simple
cabal-version:       2.0

executable crux-go

  hs-source-dirs: tool
  main-is: Main.hs
  other-modules: Paths_crucible_go
  autogen-modules: Paths_crucible_go

  build-depends:
    base >= 4 && < 5,
    crucible,
    lens,
    parameterized-utils >= 1.0 && < 2.2,
    golang,
    crucible-go,
    crux,
    bytestring

  ghc-options: -Wall -Wcompat -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2 -fprof-auto-top

  default-language: Haskell2010


library
  exposed-modules:     Lang.Crucible.Go.Builtin
                       Lang.Crucible.Go.Encodings
                       Lang.Crucible.Go.Overrides
                       Lang.Crucible.Go.Simulate
                       Lang.Crucible.Go.Translation
                       Lang.Crucible.Go.TransUtil
                       Lang.Crucible.Go.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && < 5
                     , golang
                     , text
                     , crucible
                     , unordered-containers
                     , parameterized-utils
                     , mtl >= 2.1
                     , data-default-class
                     , what4 >= 0.4
                     , transformers >= 0.3
                     , crux
                     , vector >= 0.7
                     , bv-sized
  hs-source-dirs:      src
  default-language:    Haskell2010
