Name:          crucible-jvm
Version:       0.2.1.0
Author:        Galois Inc.
Copyright:     (c) Galois, Inc. 2018-2022
Maintainer:    huffman@galois.com, sweirich@galois.com
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Cabal-version: 2.0
Category:      Language
Synopsis:      Support for translating and executing JVM code in Crucible

extra-doc-files: CHANGELOG.md

executable crucible-jvm

  hs-source-dirs: tool
  main-is: Main.hs
  other-modules: Paths_crucible_jvm
  autogen-modules: Paths_crucible_jvm

  build-depends:
    base >= 4 && < 5,
    bv-sized >= 1.0.0,
    array,
    containers,
    crucible,
    crucible-debug,
    crucible-jvm,
    directory,
    filepath,
    haskeline >= 0.7,
    lens,
    mtl >= 2.1,
    parameterized-utils >= 1.0 && < 2.2,
    pretty >= 1.1,
    split >= 0.2,
    text,
    transformers >= 0.3,
    transformers-compat,
    vector >= 0.7,
    jvm-parser >= 0.3,
    what4 >= 0.4,
    crucible-jvm,
    ansi-terminal,
    crux

  ghc-options: -Wall -Wcompat -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2 -fprof-auto-top

  default-language: Haskell2010


library

  build-depends:
    base >= 4.13 && < 5,
    array,
    base16-bytestring >= 0.1 && < 1.1,
    bv-sized >= 1.0.0,
    bytestring,
    containers,
    crucible,
    cryptohash-sha1 >= 0.11 && < 0.12,
    directory >= 1.2.5,
    extra >= 1.6.4,
    filepath,
    haskeline >= 0.7,
    jvm-parser >= 0.3,
    lens,
    mtl >= 2.1,
    parameterized-utils >= 1.0 && < 2.2,
    pretty >= 1.1,
    process,
    split >= 0.2,
    text,
    transformers >= 0.3,
    transformers-compat,
    vector >= 0.7,
    what4 >= 0.4

  hs-source-dirs: src

  exposed-modules:
    Lang.Crucible.JVM
    Lang.Crucible.JVM.Types
    Lang.Crucible.JVM.Context
    Lang.Crucible.JVM.Simulate
    Lang.Crucible.JVM.Translation
    Lang.Crucible.JVM.Translation.Class
    Lang.Crucible.JVM.Translation.Monad
    Lang.Crucible.JVM.Translation.Numeric
    Lang.Crucible.JVM.ClassRefs
    Lang.Crucible.JVM.Overrides
    Lang.JVM.Codebase
    Lang.JVM.JavaTools
    Lang.JVM.ProcessUtils
  other-modules:

  ghc-options: -Wall -Wcompat -Werror=incomplete-patterns -Werror=missing-methods -Werror=overlapping-patterns
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010
